[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lru-cache"
version = "1.0.0"
description = "Persisted LRU cache Python module"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Joshua Peek" }]
maintainers = [{ name = "Joshua Peek" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0,<2.0",
    "pytest>=8.0.0,<9.0",
    "ruff>=0.5.0",
]

[tool.setuptools]
py-modules = ["lru_cache"]

[tool.hatch.build.targets.wheel.force-include]
"lru_cache.py" = "lru_cache/__init__.py"
"py.typed" = "lru_cache/py.typed"

[tool.hatch.build.targets.sdist]
include = ["lru_cache.py", "py.typed"]

[tool.ruff.lint]
extend-select = ["I", "UP", "LOG", "G", "PT", "SIM", "TCH"]

[tool.mypy]
strict = true
